(fix): remove dep cycle

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@reach/router": "^1.2.1",
     "axios": "^0.19.0",
     "bulma": "^0.7.5",
+    "lodash.debounce": "^4.0.8",
     "react": "^16.8.5",
     "react-dom": "^16.9.0",
     "react-hot-loader": "^4.12.11",
@@ -38,6 +39,7 @@
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "24.0.11",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/node": "11.11.7",
     "@types/reach__router": "^1.2.4",
     "@types/react": "16.9.0",
