--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@reach/router": "^1.2.1",
     "axios": "^0.19.0",
     "bulma": "^0.7.5",
+    "dayjs": "^1.8.16",
     "lodash.debounce": "^4.0.8",
     "react": "^16.8.5",
     "react-dom": "^16.9.0",
