--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@hot-loader/react-dom": "^16.9.0",
     "@reach/router": "^1.2.1",
+    "@rocketseat/unform": "^1.5.1",
     "axios": "^0.19.0",
     "bulma": "^0.7.5",
     "dayjs": "^1.8.16",
@@ -15,6 +16,7 @@
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
+    "redux-localstorage": "^0.4.1",
     "redux-saga": "^1.0.5",
     "redux-thunk": "^2.3.0",
     "typesafe-actions": "^4.4.2",
@@ -46,6 +48,7 @@
     "@types/react": "16.9.0",
     "@types/react-dom": "16.9.0",
     "@types/react-redux": "^7.1.2",
+    "@types/redux-localstorage": "^1.0.8",
     "@typescript-eslint/eslint-plugin": "^1.5.0",
     "@typescript-eslint/parser": "^1.5.0",
     "customize-cra": "^0.5.0",
